Bg 100% auto у товаров

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -268,7 +268,7 @@ nav.filter {
 }
 .products .item {
 	position: relative;
-	background-size: cover;
+	background-size: 100% auto;
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
 	width: 100%;
