Изменение в фоне картинок

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -268,7 +268,7 @@ nav.filter {
 }
 .products .item {
 	position: relative;
-	background-size: 100% auto;
+	background-size: auto 100%;
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
 	width: 100%;
@@ -902,13 +902,13 @@ nav.dynamic-rubricator {
 			display: none;
 			padding-left: 20px;
 			a {
-				padding-left: 35px;
+				padding-left: 45px;
 			}
 			
 		}
 		&[data-level="3"] {
 			display: none;
-			padding-left: 40px;
+			padding-left: 50px;
 			a {
 				padding-left: 35px;
 			}
