--- a/public/css/global.less
+++ b/public/css/global.less
@@ -18,7 +18,9 @@
 }
 
 
-
+.additional-rubrics {
+	font-size: 16px;
+}
 .fast-elastic {
 	transition: all 0.3s cubic-bezier(0.64, 0.57, 0.67, 1.53);
 }
@@ -899,6 +901,8 @@ nav.dynamic-rubricator {
 		}
 
 		&[data-level="2"] {
+			font-family: Trebuchet MS;
+			font-size: 12px;
 			display: none;
 			padding-left: 20px;
 			a {
@@ -907,6 +911,7 @@ nav.dynamic-rubricator {
 			
 		}
 		&[data-level="3"] {
+			font-size: 10px;
 			display: none;
 			padding-left: 50px;
 			a {
@@ -1316,6 +1321,10 @@ a.phone {
 
 .download-price:hover {
 	color: #207347 !important;
+}
+
+.download-price {
+	font-size: 12px !important;
 }
 
 .product-image {
